# FlutterCppWangWangPhone

./: .gitignore  DevelopBackground.md  DevelopRequirements.md  DevelopTechFramework.md  README.md  TODO.md  version.properties
.github/workflows/: build-android-apk.yml
cpp_core/: CMakeLists.txt
cpp_core/include/wangwang/: types.h
cpp_core/src/core/: app_core.cpp  app_core.h
cpp_core/src/database/: database_manager.cpp  database_manager.h
cpp_core/src/ffi/: wangwang_ffi.cpp  wangwang_ffi.h
wangwang_phone/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
wangwang_phone/android/app/: build.gradle.kts
wangwang_phone/android/app/src/main/: AndroidManifest.xml
wangwang_phone/android/app/src/main/kotlin/com/wangwang/phone/: MainActivity.kt
wangwang_phone/android/app/src/main/kotlin/com/wangwang/wangwang_phone/: MainActivity.kt
wangwang_phone/ios/Runner/: Info.plist
wangwang_phone/ios/Runner.xcodeproj/: project.pbxproj
wangwang_phone/lib/: main.dart
wangwang_phone/lib/app/: app.dart
wangwang_phone/lib/app/chat/: chat_app_page.dart
wangwang_phone/lib/app/home/: home_page.dart
wangwang_phone/lib/app/shared/: ui.dart
wangwang_phone/lib/app/startup/: startup_flow_page.dart  startup_security_store.dart
wangwang_phone/lib/app/weather/: weather_detail_page.dart  weather_repository.dart  weather_types.dart  weather_widget_card.dart
wangwang_phone/test/: widget_test.dart
